增加了默认列名的策略，全大写的策略